Revision history for String-Utils

{{$NEXT}}

0.0.35  2025-07-25T11:56:18+02:00
    - Added support for "text-from-url"
    - Tightened up coverage testing to 96%

0.0.34  2025-07-23T12:51:51+02:00
    - Ordered code alphabetically for better maintainability
    - Made String::Utils.^ver/auth/api meta methods produce values

0.0.33  2025-07-22T14:27:36+02:00
    - Added support for "sha1", as we also have "is-sha1"
    - Order documentation of subs alphabetically
    - Update copyright year

0.0.32  2024-12-16T17:13:30+01:00
    - Add support for "abbrev", inspired by Text::Abbrev by
      Kamila Borowska

0.0.31  2024-12-03T22:36:38+01:00
    - Make "word-at" also return the ordinal number of the word in
      string, and return Empty if not found (instead of Nil)

0.0.30  2024-12-03T20:42:23+01:00
    - Add support for "word-at"

0.0.29  2024-10-07T15:15:34+02:00
    - Add support for "expand-tab"

0.0.28  2024-08-19T15:42:49+02:00
    - Adapt "paragraphs" so that any text split with this subroutine
      will roundtrip with its source when the values are joined with "\n"

0.0.27  2024-08-18T12:20:10+02:00
    - Add support for ":Pair" named argument to "paragraphs" to set
      the class with which to create the objects

0.0.26  2024-08-16T13:53:24+02:00
    - Add support for "regexify"

0.0.25  2024-08-05T16:32:56+02:00
    - Add support for "paragraphs"
    - Separate documentation into a separate file

0.0.24  2024-07-29T15:44:22+02:00
    - Add separate CI badges for each OS
    - Add sponsor button

0.0.23  2024-05-13T12:59:15+02:00
    - Add support for "nomark"
    - Update copyright year

0.0.22  2023-07-04T21:31:56+02:00
    - Add support for "is-uppercase"
    - Add support for "is-lowercase"

0.0.21  2023-05-11T11:32:44+02:00
    - Add support for "all-same"

0.0.20  2023-05-10T18:21:53+02:00
    - Make "consists-of" semantics same as "is-whitespace" with
      regards to handling the empty string

0.0.19  2023-05-10T17:56:41+02:00